# cyberdog_sim

./: LICENSE  README.md
cyber_io/: a.sh
cyber_io/src/cyber_base/: CMakeLists.txt  package.xml
cyber_io/src/cyber_base/include/: MotorCtrl.hpp  custom_interface.hpp
cyber_io/src/cyber_base/src/: Example_MotorCtrl.cpp  MotorCtrl.cpp  custom_interface.cpp
cyber_io/src/ros_bridge/: CMakeLists.txt
cyber_io/src/ros_bridge/msg/: QR.msg  SimBase.msg  SimJoint.msg
cyber_io/src/ros_bridge/srv/: UsrCmd.srv
src/cyber_guide/: CMakeLists.txt  cyber_controller.cpp  cyber_controller.hpp  package.xml
src/cyber_guide/common/: CMakeLists.txt
src/cyber_guide/common/FootstepPlanner/: CMakeLists.txt
src/cyber_guide/common/include/: Types.h  cppTypes.h
src/cyber_guide/common/include/Collision/: ContactConstraint.h
src/cyber_guide/common/include/Controllers/: ContactEstimator.h  DesiredStateCommand.h  LegController.h  OrientationEstimator.h  StateEstimatorContainer.h  wfilter.hpp
src/cyber_guide/common/include/Dynamics/: MiniCheetah.h
src/cyber_guide/common/include/SimUtilities/: SimulatorMessage.h
src/cyber_guide/common/src/Collision/: CollisionMesh.cpp  ContactImpulse.cpp
src/cyber_guide/common/src/Controllers/: ContactEstimator.cpp  DesiredStateCommand.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp
src/cyber_guide/common/src/Dynamics/: DynamicsSimulator.cpp  FloatingBaseModel.cpp
src/cyber_guide/common/src/Utilities/: PeriodicTask.cpp  SegfaultHandler.cpp
src/cyber_guide/robot/: CMakeLists.txt
src/cyber_guide/robot/include/: RobotController.h  RobotRunner.h  SimulationBridge.h  main_helper.h
src/cyber_guide/robot/include/rt/: rt_keyboard.h  rt_rc_interface.h  rt_sbus.h  rt_srv.h
src/cyber_guide/robot/src/: JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
src/cyber_guide/robot/src/rt/: rt_keyboard.cpp  rt_rc_interface.cpp  rt_sbus.cpp  rt_serial.cpp  rt_srv.cpp
src/cyber_guide/sim/: CMakeLists.txt
src/cyber_guide/sim/gazebo/: CMakeLists.txt
src/cyber_guide/sim/gazebo/include/interface/: IOInterface.h  IOROS.h  mathTools.h  mathTypes.h  timeMarker.h
src/cyber_guide/sim/gazebo/include/message/: LowlevelCmd.h  LowlevelState.h  UserParameters.h
src/cyber_guide/sim/gazebo/src/interface/: IOROS.cpp
src/cyber_guide/user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC/: WBC.hpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC/WBIC/: KinWBC.cpp  WBIC.hpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC_Ctrl/ContactSet/: SingleContact.cpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
src/cyber_guide/user/MIT_Controller/Controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyPosTask.cpp  BodyPostureTask.cpp  BodyRyRzTask.cpp  JPosTask.cpp  LinkPosTask.cpp  LocalHeadPosTask.cpp  LocalPosTask.cpp  LocalRollTask.cpp  LocalTailPosTask.cpp
src/cyber_guide/user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.cpp  Gait.h  RobotState.cpp  RobotState.h  op.hpp  wfilter.hpp
src/cyber_guide/user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h  SafetyChecker.cpp
src/ros_bridge/: CMakeLists.txt
src/ros_bridge/msg/: LeggedCommand.msg  Qweights.msg  SimImu.msg  TrajVisual.msg  VPf.msg  VState.msg  VTraj.msg
src/ros_bridge/srv/: SetGait.srv  UsrCmd.srv
src/sim_base/: CMakeLists.txt  package.xml
src/sim_base/config/: rviz2.config.rviz
src/sim_base/include/: c_types.h  cpp_types.hpp  utilities.h
src/sim_base/include/actors_gazebo/: actuator.hpp  legged_plugin.hpp  visual_plugin.hpp
src/sim_base/include/actors_rviz/: state_publisher.hpp
src/sim_base/launch/: rviz.launch.py  sim.launch.py
src/sim_base/model/: actors.urdf  visual.urdf
src/sim_base/model/10cm/: model.config  model.sdf
src/sim_base/model/20degree/: model.config  model.sdf
src/sim_base/model/7cm/: model.config  model.sdf
src/sim_base/model/meshes/: actors.sdf  model.config
src/sim_base/model/stone/stone_road/: model.config  model.sdf
src/sim_base/src/actors_gazebo/: legged_plugin.cpp  visual_plugin.cpp
src/sim_base/src/actors_rviz/: state_publisher.cpp  state_publisher_node.cpp
src/sim_base/world/: simple.world  stair1.world  stair7cm.world
