<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyber_guide</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jh@todo.todo">jh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>Eigen3</build_depend>
  <!-- <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_bridge</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
